err/desire.err
Listing '.'...
Listing './bin'...
Listing './etc'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/desire'...
Listing './lib/python3.5/site-packages/desire/apache'...
Listing './lib/python3.5/site-packages/desire/application'...
Listing './lib/python3.5/site-packages/desire/cli'...
Compiling './lib/python3.5/site-packages/desire/cli/admin.py'...
***   File "./lib/python3.5/site-packages/desire/cli/admin.py", line 123
    print usage
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/desire/command'...
Compiling './lib/python3.5/site-packages/desire/command/package.py'...
***   File "./lib/python3.5/site-packages/desire/command/package.py", line 60
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/desire/dippy_example.py'...
***   File "./lib/python3.5/site-packages/desire/dippy_example.py", line 13
    print "GIRL(in %s, named %s) SAYS: Mwah!" % (self.context, self.name)
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/desire/django'...
Listing './lib/python3.5/site-packages/desire/django/apps'...
Listing './lib/python3.5/site-packages/desire/django/apps/eui'...
Listing './lib/python3.5/site-packages/desire/django/apps/eui/views'...
Compiling './lib/python3.5/site-packages/desire/django/apps/eui/views/accesscontrol.py'...
***   File "./lib/python3.5/site-packages/desire/django/apps/eui/views/accesscontrol.py", line 43
    except KforgeCommandError, inst:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/desire/django/apps/eui/views/admin'...
Compiling './lib/python3.5/site-packages/desire/django/apps/eui/views/admin/__init__.py'...
***   File "./lib/python3.5/site-packages/desire/django/apps/eui/views/admin/__init__.py", line 169
    raise Exception, "Case '%s' not supported." % caseName
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/desire/django/settings'...
Listing './lib/python3.5/site-packages/desire/django/settings/urls'...
Listing './lib/python3.5/site-packages/desire/dom'...
Compiling './lib/python3.5/site-packages/desire/filesystem.py'...
***   File "./lib/python3.5/site-packages/desire/filesystem.py", line 23
    raise Exception, "No project passed."
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/desire/plugin'...
Compiling './lib/python3.5/site-packages/desire/plugin/example.py'...
***   File "./lib/python3.5/site-packages/desire/plugin/example.py", line 14
    raise Exception, msg
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/desire/script.py'...
***   File "./lib/python3.5/site-packages/desire/script.py", line 34
    print statement
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/desire/tracclient'...
Compiling './lib/python3.5/site-packages/desire/url.py'...
***   File "./lib/python3.5/site-packages/desire/url.py", line 30
    raise Exception, 'AbstractMethod'
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/desire/utils'...
Listing './lib/python3.5/site-packages/desire-0.36.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
Listing './var'...
Listing './var/django'...
Listing './var/django/templates'...
Listing './var/django/templates/eui'...
Listing './var/django/templates/eui/admin'...
Listing './var/django/templates/eui/collections'...
Listing './var/django/templates/eui/events'...
Listing './var/django/templates/eui/goals'...
Listing './var/django/templates/eui/processes'...
Listing './var/django/templates/eui/products'...
Listing './var/django/templates/eui/registry'...
Listing './var/django/templates/eui/requirements'...
Listing './var/django/templates/eui/stories'...
Listing './var/django/templates/eui/walks'...
Listing './var/images'...
Listing './var/log'...
Listing './var/www'...
Listing './var/www/media'...
Listing './var/www/media/behaviour'...
Listing './var/www/media/behaviour/vendor'...
Listing './var/www/media/behaviour/vendor/dialog'...
Listing './var/www/media/behaviour/vendor/dialog/assets'...
Listing './var/www/media/behaviour/vendor/dialog/assets/box'...
Listing './var/www/media/behaviour/vendor/dialog/assets/box/blue'...
Listing './var/www/media/behaviour/vendor/dialog/assets/box/blue/ie'...
Listing './var/www/media/behaviour/vendor/dialog/assets/box/orange'...
Listing './var/www/media/behaviour/vendor/dialog/assets/icons'...
Listing './var/www/media/behaviour/vendor/dialog/assets/icons/64x64'...
Listing './var/www/media/behaviour/vendor/dialog/js'...
Listing './var/www/media/css'...
Listing './var/www/media/images'...
Listing './var/www/media/images/captchas'...
